# job-keyword-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  APPLICATION_COMPLETE.md  GUIDE_UTILISATION.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-helper  package-lock.json  pyproject.toml  scrapy.cfg  start-minimal.sh  start.sh  stop-app.sh
.github/workflows/: cd.yml  ci.yml  maintenance.yml  release.yml
backend/: Dockerfile  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20241227_1800_0001_initial_migration_create_tables.py  20241228_0900_0002_add_authentication_tables.py
backend/api/: __init__.py  auth.py  main.py  main_simple.py
backend/auth/: __init__.py  crud.py  dependencies.py  schemas.py  security.py
backend/core/: __init__.py  config.py
backend/database/: simple_db.py
backend/models/: __init__.py  daily_stats.py  database.py  job_offer.py  job_offer_keyword.py  keyword.py  scraping_job.py  user.py
backend/scraper/: __init__.py  items.py  middlewares.py  pipelines.py  runner.py  settings.py
backend/scraper/spiders/: base_spider.py  indeed_spider.py  linkedin_spider.py
backend/services/: __init__.py  email_service.py  nlp_analyzer.py  oauth_service.py  scraping_service.py  search_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/test_api/: test_main.py
backend/tests/test_auth/: __init__.py  test_auth_api.py
backend/tests/test_models/: test_job_offer.py
backend/tests/test_scrapers/: test_indeed_spider.py
backend/tests/test_services/: test_nlp_analyzer.py
docker/mysql/: init.sql
docker/nginx/: nginx.conf
docs/: APPLICATION_COMPLETE.md  APPLICATION_VISION.md  FRONTEND_IMPROVEMENTS.md  GUIDE_UTILISATION.md  MASTER_PLAN.md  README.md  TECHNICAL_SPECIFICATIONS.md  docker-management.md  quick-start-docker.md
frontend/: .eslintrc.js  .prettierrc.js  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  App_New.jsx  index.css
frontend/src/components/Auth/: AuthContainer.jsx  LoginForm.jsx  ProtectedRoute.jsx  RegisterForm.jsx
frontend/src/components/Dashboard/: Dashboard.jsx  RecentJobs.jsx  StatsCard.jsx  TopKeywords.jsx
frontend/src/components/Layout/: AuthenticatedLayout.jsx  Header.jsx
frontend/src/components/Search/: Search.jsx  SearchForm.jsx  SearchResults.jsx
frontend/src/contexts/: AuthContext.jsx
scripts/: check_requirements.py  docker-helper.sh  init-mysql.sh  setup-dev.sh
